# roach

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TESTING.md  pixi.toml  pyproject.toml  roach.py
examples/: README.md  ml_workflow.py  plotting_demo.py  queue_demo.py  run_all.sh
roach/: __init__.py  paper.py  plot.py  queue.py  store.py  submit.py  worker.py
