[project]
name = "roach"
version = "0.0.1"
description = "fearless experiment management"
readme = "README.md"
authors = [{name = "Rishabh Ranjan", email = "rishabhranjan0207@gmail.com"}]
dependencies = [
	"matplotlib",
	"seaborn",
	"torch",
	"psutil",
	"strictfire",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
