[project]
name = "roach"
version = "0.0.1"
description = "fearless experiment management"
readme = "README.md"
authors = [{name = "Rishabh Ranjan", email = "rishabhranjan0207@gmail.com"}]
dependencies = [
	"matplotlib",
	"seaborn",
	"torch",
	"psutil",
	"strictfire",
	"yagmail",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
roach = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.11"
pre-commit = "*"

[tool.pixi.activation]
scripts = ["scripts/activate.sh"]
